trying to fix Dockerfile