@@ -5,7 +5,7 @@ RUN mkdir -p /app/built
 ENV GRADLE_USER_HOME /home/gradle/cache
 COPY build.gradle.kts /app/sources
 WORKDIR /app/sources
-RUN gradle clean build -x test
+RUN gradle build -x test
 
 FROM gradle:8.4.0-jdk21-alpine AS build
 COPY --from=cache /home/gradle/cache /home/gradle/.gradle
@@ -18,4 +18,4 @@ RUN addgroup -S instance && adduser -S maea -G instance
 USER maea
 
 COPY --from=build /app/sources/bootstrapper/build/libs/* /app/built/app.jar
-ENTRYPOINT java --enable-preview -jar app/built/app.jar
+ENTRYPOINT java -jar app/built/app.jar
